fix: adjustment on small device

--- a/src/styles/Calendar/Calendar.css
+++ b/src/styles/Calendar/Calendar.css
@@ -189,16 +189,17 @@
         border-radius: 10px;
     }
 } 
-@media screen and (max-width:390px) {
+@media screen and (max-width:395px) {
     .calendar_container
     {
         display: flex;
         flex-direction: column;
-        height: 87vh;
+        height: 100vh;
         width: 93%;
         margin-left: 30px;
         background-color: rgba(249, 249, 250, 0.879);
-        margin-top: 20px;
+        background-color: red;
+        margin-top: 100px;
         border-radius: 10px;
     }
 }
