--- a/src/styles/Dashboard/Dashboard.css
+++ b/src/styles/Dashboard/Dashboard.css
@@ -92,7 +92,7 @@
         margin-top: -20px;
     }
 }
-@media screen and (max-width:390px) {
+@media screen and (max-width:395px) {
     .dashboard_container
     {
         display: flex;
